# finance

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Home.py  LICENSE  Pipfile  README.md  accrued_income.md  accrued_income.py  analytics.py  annuities.py  caching.py  cgtcalc.md  cgtcalc.py  cgtcalculator2cgtcalc.py  common.py  conftest.py  download.py  environ.py  eri.py  lse.py  nsandi_premium_bonds.py  packages.txt  pyproject.toml  report.py  requirements-dev.txt  requirements.txt  rpi.py  rws.py  ukbankholidays.csv  ukcalendar.py  xirr.py
.devcontainer/: .gitignore  Dockerfile  devcontainer.json
.streamlit/: config.toml
_site/: rpi-series.csv
data/: .gitignore  boe.py  dmo_issued.csv  dmo_issued.py  hmrc.py  lse.py  mortality.py  rpi.py  tidm.csv  tidm.py  tradeweb.py
gilts/: .gitignore  README.md  Tradeweb_FTSE_ClosePrices_20231117.csv  app.py  caching.py  conftest.py  dmo-D1A.csv  dmo.py  download.py  gilts-closing-prices-20231201.csv  gilts.py  ladder.py  lse.py  rpi-series-20231018.csv  rpi.py  test_dmo.py  test_download.py  test_gilts.py  test_gilts_app.py  test_lse.py  test_rpi.py  test_schedule.csv  test_selenium.py  test_ukbankholidays.py  test_ukcalendar.py  test_xirr.py  tidm.csv  ukbankholidays.csv  ukbankholidays.py  ukcalendar.py  xirr.py
lp/: __init__.py  lp.py
pages/: 1_Gilt_Ladder.py  2_Retirement_Tax_Planner.py  3_CGT_Calculator.py  4_Accrued_Income_Calculator.py  5_Annuity_Valuator.py  6_Net_Yields.py  9_Disclaimer.py
rtp/: .gitignore  CONTRIBUTING.md  README.md  app.py  hmrc.py  jp.py  lp.py  lp_test.py  model.py  (+7 more)
(+642 files in other folders)
