[project]
name = "lategenxer"
version = "0.1.0"
description = "LateGenXer's financial tools."
readme = "README.md"
requires-python = ">=3.12"
# Use requirements*.txt for now
#dependencies = []

[tool.pytest.ini_options]
minversion = "6.0"
log_format = "%(asctime)s %(name)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_cli = true
log_cli_level = "INFO"
# https://github.com/pytest-dev/pytest/issues/9037#issuecomment-905758207
disable_test_id_escaping_and_forfeit_all_rights_to_community_support = true
#addopts = "-nauto"

[tool.coverage.run]
omit = [
    "tests/*",
]

[tool.coverage.report]
# Ignore "No source for code: '.../site-packages/streamlit/static/index_html.generated.py'"
ignore_errors = true

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
ignore = ["E402", "F403", "F405"]

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
check_untyped_defs = true

[[tool.mypy.overrides]]
# https://mypy.readthedocs.io/en/stable/running_mypy.html#missing-library-stubs-or-py-typed-marker
module = ["untyped_package.*"]
follow_untyped_imports = true
